Fixed error codes when user unauthorised
